[tool.poetry]
name = "marshmallow-jsonapi"
version = "0.24.0"
description = "marshmallow-jsonapi provides a simple way to produce JSON API-compliant data in any Python web framework."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
mock = "^5.1.0"
Faker = "4.18.0"
Flask = "^3.0.3"
marshmallow = "^3.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
